# larrecodnn

./: CMakeLists.txt  README.md
larrecodnn/: CMakeLists.txt
larrecodnn/CVN/: CMakeLists.txt  README.md
larrecodnn/CVN/func/: AssignLabels.cxx  AssignLabels.h  Boundary.cxx  Boundary.h  CMakeLists.txt  CVNImageUtils.cxx  CVNImageUtils.h  HitType.cxx  HitType.h  InteractionType.cxx  InteractionType.h  LArTrainingData.cxx  LArTrainingData.h  LinkDef.h  PixelMap.cxx  PixelMap.h  Result.cxx  Result.h  TrainingData.cxx  TrainingData.h  classes.h  classes_def.xml
larrecodnn/CVN/interfaces/: CMakeLists.txt  ICVNMapper.cxx  ICVNMapper.h  ICVNZlibMaker.cxx  ICVNZlibMaker.h  ITFNetHandler.h  PixelMapProducer.cxx  PixelMapProducer.h
larrecodnn/CVN/module_helpers/: CMakeLists.txt  ICVNMapper.cxx  ICVNMapper.h  ICVNZlibMaker.cxx  ICVNZlibMaker.h  PixelMapProducer.cxx  PixelMapProducer.h  TFNetHandler.cxx  TFNetHandler.h
larrecodnn/CVN/modules/: .nfs00000000e67c6b88000000f2  CMakeLists.txt  CVNEvaluator_module.cc  CVNMapper.fcl  CVNMapperSim_module.cc  CVNMapperWire_module.cc  CVNMapper_module.cc  CVNZlibMaker_module.cc  LArCVNEvaluator.fcl  LArCVNEvaluator_module.cc  LArCVNHitMapper_module.cc  LArCVNMapper.fcl  LArCVNSimMapper_module.cc  LArCVNWireMapper_module.cc  LArNuCVNZlibMaker.fcl  LArNuCVNZlibMaker_module.cc
larrecodnn/CVN/tf/: CMakeLists.txt  tf_graph.cc  tf_graph.h
larrecodnn/CVN/tools/: CMakeLists.txt  TFNetHandler_tool.cc
larrecodnn/ImageMaker/: CMakeLists.txt  ImageMaker.h  SaveImageH5_module.cc  SavePiMu_tool.cc  makepimuh5.fcl
larrecodnn/ImagePatternAlgs/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Keras/: example_main.cc  keras_model.cc  keras_model.h
larrecodnn/ImagePatternAlgs/Keras/Tools/: PointIdAlgKeras_tool.cc
larrecodnn/ImagePatternAlgs/Modules/: CMakeLists.txt  CheckCNNScore_module.cc  EmTrack.h  EmTrackClusterId2outTl_module.cc  EmTrackClusterId3outTl_module.cc  EmTrackMichelIdTl_module.cc  EvaluateROIEff_module.cc  NoiseWaveformDump_module.cc  PointIdEffTest_module.cc  RawWaveformClnSigDump_module.cc  RawWaveformDump_module.cc  WaveformDenoiseTest_module.cc  WaveformRoiFinder_module.cc  c2numpy.h
larrecodnn/ImagePatternAlgs/NuSonic/Triton/: CMakeLists.txt  Span.h  TritonClient.cc  TritonClient.h  TritonData.cc  TritonData.h  triton_utils.cc  triton_utils.h
larrecodnn/ImagePatternAlgs/Tensorflow/Modules/: EmTrackClusterId2out_module.cc  EmTrackClusterId3out_module.cc  EmTrackMichelId_module.cc  ParticleDecayId_module.cc  PointIdTrainingData_module.cc
larrecodnn/ImagePatternAlgs/Tensorflow/PointIdAlg/: PointIdAlg.cxx  PointIdAlg.h
larrecodnn/ImagePatternAlgs/Tensorflow/TF/: CMakeLists.txt  tf_graph.cc  tf_graph.h
larrecodnn/ImagePatternAlgs/Tensorflow/Tools/: CMakeLists.txt  PointIdAlgTf_tool.cc  WaveformDenoiseTf_tool.cc  WaveformRecogTf_tool.cc  WireframeRecogTf_tool.cc
larrecodnn/ImagePatternAlgs/ToolInterfaces/: CMakeLists.txt  IPointIdAlg.h  IWaveformDenoise.h  IWaveformRecog.h  IWireframeRecog.h
larrecodnn/ImagePatternAlgs/Triton/Tools/: CMakeLists.txt  PointIdAlgSonicTriton_tool.cc  PointIdAlgTriton_tool.cc
larrecodnn/NuGraph/: CMakeLists.txt  NuGraphAnalyzer_module.cc  NuGraphApptainerInferenceSonicTriton_module.cc  NuGraphApptainerInferenceTriton_module.cc  NuGraphInferenceSonicTriton_module.cc  NuGraphInferenceTriton_module.cc  NuGraphInference_module.cc  NuSliceHitsProducer_module.cc  nugraph.fcl  nugraph_analyzer.fcl  testinference_apptainer_nusonic_triton.fcl  testinference_apptainer_triton.fcl  testinference_nugraph.fcl  testinference_nusonic_triton.fcl  testinference_nusonic_triton_cpu.fcl  testinference_triton.fcl  testinference_triton_cpu.fcl  testinference_uB_slice_job.fcl
larrecodnn/NuGraph/logs/: testinference_apptainer_nusonic_triton.txt  testinference_apptainer_triton.txt  testinference_nugraph.txt  testinference_nusonic_triton_cpu.txt  testinference_nusonic_triton_gpu.txt  testinference_triton_cpu.txt  testinference_triton_gpu.txt  timing_analysis_script.py
migrate-backup-20221011-120539-0500/larrecodnn/CVN/: CMakeLists.txt
migrate-backup-20221011-120539-0500/larrecodnn/CVN/func/: CMakeLists.txt
migrate-backup-20221011-120539-0500/larrecodnn/CVN/module_helpers/: CMakeLists.txt
ups/: product_deps
