add_subdirectory(ToolInterfaces)
add_subdirectory(Keras)
add_subdirectory(Modules)
if (TensorFlow_FOUND)
  add_subdirectory(Tensorflow)
endif()
if (TritonClient_FOUND)
  message(STATUS "INFO: the Triton Client interface needs to be updated for trition 2.25.0")
  message(STATUS "INFO: at this time we cannot build NuSonic or Triton")
  ## Uncomment the two add_subdirectory lines below to work on the triton interface
  add_subdirectory(NuSonic)
  add_subdirectory(Triton)
endif()
add_subdirectory(job)
